# mastermind_coaching

./: .env  .pre-commit-config.yaml  POERUNCMD.md  README.md  db.sqlite3  env.dist  manage.py  pyproject.toml
.githooks/: commit-msg.sh  pre-commit.sh  pre-push.sh
apps/authority/: apps.py  urls.py
apps/endpoint/: apps.py  urls.py
apps/home/: apps.py  views.py
apps/student/: permission.py  urls.py
apps/teacher/: permission.py  urls.py
apps/user/: admin.py  models.py
backend/: backend.py
common/: custom_id.py  models.py  widgets.py
config/: env.py
config/django/: __init__.py  auth.py  cache.py  channel.py  database.py  general.py  installed_apps.py  location.py  middlware.py  rest_framework.py  schema.py  security.py  session.py  static.py  template.py
config/server/: asgi.py  wsgi.py
env/: .env.local
routes/: urls.py
static/: staticfiles.json
templates/: index.html
templates/accounts/: base.html  login.html
templates/authority/: add_class.html  add_institute.html  add_notice.html  add_student.html  add_student_info.html  add_teacher.html  add_teacher_education.html  add_teacher_info.html  base.html  delete_class.html  delete_institute.html  delete_notice.html  delete_teacher.html  index.html  notice_details.html  notice_list.html  student_details.html  student_list.html  teacher_details.html  teacher_list.html  update_notice.html  update_student.html  update_teacher.html
templates/student/: assignment_details.html  assignment_list.html  base.html  enrolled_course.html  index.html  notice_details.html  notice_list.html  routine.html  (+3 more)
(+102 files in other folders)
